fix: card image overflow problem

--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -1,7 +1,4 @@
 .card__image {
-  width: 100%;
   min-height: 282px;
-  object-position: bottom;
-  object-fit: cover;
-  display: block;
+  background-size: cover;
 }
